Fix: overflow section 1

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,4 @@
 body {
   background-color: rgb(46, 56, 82);
+  color: white;
 }
